tools/crates/vendor/toml_edit-0.19.15/tests/fixtures/invalid/string/basic-out-of-range-unicode-escape-1.stderr
TOML parse error at line 1, column 8
  |
1 | a = "\UFFFFFFFF"
  |        ^
invalid unicode 8-digit hex code
value is out of range
